// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should have ids when ids is true 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 212,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "chunks": [
    {
      "auxiliaryFiles": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 59,
      "type": "chunk",
    },
  ],
  "filteredModules": undefined,
  "modules": [
    {
      "chunks": [
        "909",
      ],
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "size": 59,
      "type": "module",
    },
  ],
}
`;

exports[`Stats should have stats 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 212,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "children": [],
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "585",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/a",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
          "usedExports": null,
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 59,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 212,
        },
      ],
      "assetsSize": 212,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "57e46af248a1c1fe076f",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/a",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
      "usedExports": null,
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 212,
        },
      ],
      "assetsSize": 212,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`Stats should output stats with query 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 387,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "children": [],
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "585",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuerId": "432",
          "issuerName": "./fixtures/c.js?c=3",
          "issuerPath": [
            {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
            {
              "id": "432",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "name": "./fixtures/c.js?c=3",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": "432",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "moduleName": "./fixtures/c.js?c=3",
              "type": "cjs require",
              "userRequest": "./a",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
          "usedExports": null,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "958",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "919",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": [
            {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js?a=1",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": "919",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs require",
              "userRequest": "./a?a=1",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
          "usedExports": null,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "432",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "919",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": [
            {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/c.js?c=3",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": "919",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs require",
              "userRequest": "./c?c=3",
            },
          ],
          "size": 79,
          "source": "module.exports = function b() {
    require("./a");
    return "This is c";
};
",
          "type": "module",
          "usedExports": null,
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/abc-query.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "orphan": false,
          "providedExports": [],
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/abc-query",
            },
          ],
          "size": 99,
          "source": "exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");
",
          "type": "module",
          "usedExports": null,
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 296,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 387,
        },
      ],
      "assetsSize": 387,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "863c8adf2d7c24d82182",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuerId": "432",
      "issuerName": "./fixtures/c.js?c=3",
      "issuerPath": [
        {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
        {
          "id": "432",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "name": "./fixtures/c.js?c=3",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": "432",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "moduleName": "./fixtures/c.js?c=3",
          "type": "cjs require",
          "userRequest": "./a",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "958",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "919",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": [
        {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js?a=1",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": "919",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs require",
          "userRequest": "./a?a=1",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "432",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "919",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": [
        {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/c.js?c=3",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": "919",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs require",
          "userRequest": "./c?c=3",
        },
      ],
      "size": 79,
      "source": "module.exports = function b() {
    require("./a");
    return "This is c";
};
",
      "type": "module",
      "usedExports": null,
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "919",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/abc-query.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "orphan": false,
      "providedExports": [],
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/abc-query",
        },
      ],
      "size": 99,
      "source": "exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");
",
      "type": "module",
      "usedExports": null,
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 387,
        },
      ],
      "assetsSize": 387,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;
